 + Added new argument in JEditor::display to take an optional 'id' for the field element (inserted before $params).
 # Corrected bugs in CodeMirror plugin caused by array-based naming of JForm fields (hence addition of id arguments above).
 ! Completed source editing in com_templates.
 # Fixed php notice when editing an article.

04-Nov-2009 Andrew Eddie
 # Fix bugs in list pagination (stepping to page 2+).

03-Nov-2009 Andrew Eddie
 ^ Change dtd of template install files to 1.6.
 ^ Add client columns to template style and templates list; adjust client filters to be able to display all templates.
 ^ Changed template preview handling into JHtml helper.
 + Added file edit features to template detail page.
 ^ Reconfigured template source edit functions.

29-Oct-2009 Ron Severdia
^ Template Manager change, new thumbnail preview

29-Oct-2009 Andrew Eddie
 ! Reverted plugin edit form to last good state.
 ^ Renamed table jos_menu_template to jos_template_styles; refactored schema.
 ^ Renamed jos_menu.template_id to jos_menu.template_style_id.
 ^ Update milkyway template language file.
 ^ Update milkyway and bluestork manifest files.
 ^ Separated template styles from template file management/customisation.
 + Templates params now support multiple params groups (basic, advanced, etc).
 + Added ability to copy/clone an existing template style.
 ^ Fix JFormField::_getInputId so that it cleans out invalid characters in id's (like array brackets); fix getLabel to not recompute the id.
 ^ Refactored templates list.
 ^ Templates thumb shown, added modal popup (allowing bigger preview).
 ^ Replaced template edit form (now handled in styles) with mock control panel for editing files in the template.
 ^ Replaced reference to Beez with Atomic in installation SQL.

28-Oct-2009 Andrew Eddie
 ! Fix block and activation methods to com_users backend list.
 ^ Sync backend com_users MVC code structure.
 ^ Renamed JTableViewlevels to JTableViewlevel.
 ^ Renamed modal article selector field.
