@@ -18,8 +18,8 @@ MENUS_VIEW_MENUS_TITLE=Menu Manager: Menus
 MENUS_TOOLBAR_REBUILD=Rebuild
 MENUS_CHANGE_LINKTYPE=Change
 
-MENUS_LAYOUT_REQUEST_VARIABLES_DESC=These options are added directly to the menu link.
-MENUS_LAYOUT_REQUEST_VARIABLES_LABEL=Link Variables
+MENUS_LAYOUT_REQUEST_VARIABLES_DESC=These are required settings added directly to the menu link.
+MENUS_LAYOUT_REQUEST_VARIABLES_LABEL=Required Settings
 MENUS_LAYOUT_BASIC_OPTIONS_LABEL=Basic Options
 MENUS_LAYOUT_ADVANCED_OPTIONS_LABEL=Advanced Options
 
@@ -42,10 +42,10 @@ JMENUS_HEADING_LINKED_MODULES=Modules Linked to the Menu
 JMENUS_HEADING_NUMBER_MENU_ITEMS=Number of Menu Items
 
 MENUS_ITEM_ALIAS_DESC=Alias Desc
-MENUS_ITEM_ANCHOR_CSS_DESC=Anchor CSS Desc
-MENUS_ITEM_ANCHOR_CSS_LABEL=Anchor CSS
-MENUS_ITEM_ANCHOR_TITLE_DESC=Anchor Title Desc
-MENUS_ITEM_ANCHOR_TITLE_LABEL=Anchor Title
+MENUS_ITEM_ANCHOR_CSS_DESC=An optional, custom style to apply to the menu hyperlink.
+MENUS_ITEM_ANCHOR_CSS_LABEL=Link CSS Style
+MENUS_ITEM_ANCHOR_TITLE_DESC=An optional, custom description for the title attribute of the menu hyperlink.
+MENUS_ITEM_ANCHOR_TITLE_LABEL=Link Title Attribute
 MENUS_ITEM_BROWSERNAV_DESC=BrowserNav Desc
 MENUS_ITEM_BROWSERNAV_LABEL=On click, open in:
 MENUS_BROWSERNAV_OPTION_NEW_WITHOUT_NAV=New Without Navigation
@@ -78,17 +78,12 @@ MENUS_ITEM_SECURE_LABEL=Secure
 MENUS_ITEM_SHOW_PAGE_TITLE_DESC=Show Page Title Desc
 MENUS_ITEM_SHOW_PAGE_TITLE_LABEL=Show Page Title
 
-MENUS_ITEM_LINK_TITLE_LABEL=Link Title Attribute
-MENUS_ITEM_LINK_TITLE_DESC=Add custom text to the link title attribute.
-
 MENUS_ITEM_TEMPLATE_DESC=Select a template for this menu item
 MENUS_ITEM_TEMPLATE_LABEL=Template
 MENUS_ITEM_TITLE_DESC=The title of the menu item that will display in the menu.
 MENUS_ITEM_TYPE_DESC=The type of link: Component, URL, Alias or Separator
 MENUS_ITEM_TYPE_LABEL=Link Type
 MENUS_ITEM_TITLE_LABEL=Link Text
-MENUS_ITEM_LINK_TITLE_DESC= Page Title Text
-MENUS_ITEM_LINK_TITLE_LABEL=Page Title
 MENUS_ITEM_PAGE_HEADING_DESC=A  heading for the page
 MENUS_ITEM_PAGE_HEADING_LABEL=Page Heading
 MENUS_MENU_ASSIGNED_DESC=Shows which menu a link will appear in.
